--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,35 @@ h1{
     text-indent: -99999px;
     background-size: 100%;
 }
+#thanks{
+	display: none;
+	position: absolute;
+    margin: 20px;
+    background: #fff;
+    width: 100%;
+    top: 50px;
+    padding: 20px;
+    z-index: 999;
+    height: 100px;
+	text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    left: 0;
+}
+.playi{
+ 
+	background-image: url(../img/play-button.png);
+     display: block;
+    padding: 20px;
+    background-size: 30px;
+    background-repeat: no-repeat;
+    width: 100px;
+    margin: auto;
+    background-position: left center;
+}
+.show{
+		display: block !important;
+	}
 @media screen and (max-width:575px){
 	h1{
 		margin-right: 0;
@@ -317,6 +346,7 @@ h1{
 		display: block;
 	}
 	.whats_app_button{
-	 
+	 	display: block
 	}
+	
 }
