--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@
   font-weight: normal;
   font-style: normal;
 }
-
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 /* Keyframes for shake animation */
 @keyframes shake-rotate {
     2% {
