twitter logo fix

--- a/css/main.css
+++ b/css/main.css
@@ -310,7 +310,7 @@ h1{
 }
 .share_twitter{
  
-	background-image: url(../img/twitter.png);
+	background-image: url(../img/t.png);
     width: 20px;
     height: 20px;
     z-index: 99999;
